--- a/css/experience.css
+++ b/css/experience.css
@@ -41,3 +41,22 @@ li a{
 .active a{
     color: blue;
 }
+
+/*Main image*/
+.main-section{
+    background-image: url("../images/eye-candy.jpg"); 
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    position: relative;
+    height: 700px;
+}
+.main-text{
+    text-align: center;
+    position: absolute;
+    top: 20%;
+    left: 15%;
+    transform: translate(-50%, -50%);
+    text-shadow: 2px 2px white;
+    font-size: 25px;
+}
