--- a/css/experience.css
+++ b/css/experience.css
@@ -95,7 +95,7 @@ li a{
     flex-basis: 50%;
 }
 .zipline-text{
-    flex-basis: 30%;
+    flex-basis: 40%;
     text-align: left;
     margin-top: -1%;
 }
@@ -107,7 +107,6 @@ li a{
     margin-right: 15%;
     margin-top: 5%;
 }
-
 /*bungee jump*/
 .bungee-img{
     margin-top: 6%;
@@ -142,3 +141,27 @@ li a{
     margin-top: 5%;
     margin-left: 30%;
 }
+/*book*/
+#book{
+    margin-top: 5%;
+}
+.book-section{
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+.card{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    max-width: 60%;
+    margin: auto;
+    text-align: center;
+}
+/*float column side to side*/
+.column {
+    float: left;
+    width: 30%;
+    padding: 0px 10px;
+  }
+  /* Remove extra left and right margins, due to padding */
+.row {margin: 0 -5px;}
+
