modified footer layout

--- a/css/experience.css
+++ b/css/experience.css
@@ -55,10 +55,10 @@ li a{
     text-align: center;
     position: absolute;
     top: 15%;
-    left: 16%;
+    left: 22%;
     transform: translate(-50%, -50%);
     text-shadow: 2px 2px white;
-    font-size: 25px;
+    font-size: 20px;
 }
 
 /*zipline*/
@@ -67,13 +67,13 @@ li a{
     margin-left: 8%;
     margin-right: 8%;
 }
-#experiences h2{
+ h2{
     font-size: 50px;
 }
-#experiences h3{
+h3{
     font-size: 30px;
 }
-#experiences p{
+p{
     font-size: 20px;
 }
 .button{
@@ -144,31 +144,97 @@ li a{
 /*book*/
 #book{
     margin-top: 5%;
+    display: block;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 .book-section{
+    width: 100%;
     align-items: center;
     justify-content: center;
     text-align: center;
 }
 .card{
+    margin-top:15%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    max-width: 60%;
-    margin: auto;
+    padding: 16px;
     text-align: center;
+    justify-content: center;
+} 
+#card-image{
+    margin-left: 15%;
 }
-/*float column side to side*/
+/* Float four columns side by side */
 .column {
     float: left;
-    width: 30%;
-    padding: 0px 10px;
+    width: 25%;
+    padding: 0 40px;
   }
+  
   /* Remove extra left and right margins, due to padding */
-.row {margin: 0 -5px;}
+  .row {margin: 0 -5px;}
+  
+  /* Clear floats after the columns */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
 
 /*card images*/
 .weekend-img{
-    width: 60%;
+    width: 50%;
 }
 .family-img{
-    width: 50%;
+    width: 45%;
+}
+
+/*eye candy 2*/
+.image2{   
+    background-image: url("../images/eye-candi2.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    position: relative;
+    height: 600px;
+    margin-top: 3%;
+
+}
+/*footer*/
+#footer {
+    position: relative;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: lightgrey;
+    color: black;
+ }
+ .footer-nav{
+    display: flex;
+    justify-content: space-between;
+    background-color: lightgray;
+    
+}
+.footer-menu{
+    display: flex;
+    gap: 6em;
+    font-size: 20px;
+    justify-content: center;
+    align-items: center;
+    margin-left: 25%;
+    margin-top: -4%;
+}
+.footer-links li:hover{
+    background-color: rgb(193, 209, 231);
+}
+ul{
+    list-style-type: none; 
+    padding: 0 60px 0 60px;
+}
+li a{
+    float: right;
+    display: inline;
+    text-decoration: none; 
+    color: black;
 }
