--- a/css/experience.css
+++ b/css/experience.css
@@ -1,63 +1,70 @@
 html, body{
     font-family: Arial, Helvetica, sans-serif;
-    height: 100%;
-    width: 100%;
-    margin: 0;
+    cursor: pointer;
 }
-/*Logo*/
-.logo{ 
-    font-size: 30px;
-    font-weight: bold;
-    padding: 18px 18px 0 18px;
+*{
+    padding: 0;
+    margin: 0;
+    text-decoration: none;
+    list-style: none;
+    box-sizing: border-box;
+}
+header{
+    width: 100%;
+}
+nav{
+    background: #0082e6;
+    height: 80px;
+    width: 100%;
+    position: relative;
 }
 
-/*nav*/
-.navbar{
-    display: flex;
-    justify-content: space-between;
-    background-color: lightgray;
-    
+label.logo{
+    color: white;
+    font-size: 35px;
+    line-height: 80px;
+    padding: 0 100px;
+    font-weight: bold;
 }
-.nav-menu{
-    display: flex;
-    gap: 1em;
-    font-size: 18px;
-}
-.nav-links li:hover{
-    background-color: rgb(193, 209, 231);
-}
-ul{
-    list-style-type: none; 
-    margin-top: 0px;
-}
-li a{
+nav ul{
     float: right;
-    display: inline;
-    padding: 20px;
-    text-decoration: none; 
-    color: black;
+    margin-right: 20px;
 }
-.active a{
-    color: blue;
+nav ul li{
+    display: inline-block;
+    line-height: 80px;
+    margin: 0 5px;
+}
+nav ul li a{
+    color: white;
+    font-size: 17px;
+    padding: 7px 13px;
+    border-radius: 3px;
+}
+a.active,a:hover{
+    background: #1b9bff;
+    transition: .5s;
+}
+.checkbtn{
+    font-size: 30px;
+    color: white;
+    float: right;
+    line-height: 80px;
+    margin-right: 40px;
+    display: none;
+}
+#check{
+    display: none;
 }
 
 /*Main image*/
 .main-section{
-    background-image: url("../images/eye-candy.jpg"); 
+    background-image: url("../images/eye-candy.jpg")!important; 
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    position: relative;
-    height: 700px;
-}
-.main-text{
-    text-align: center;
     position: absolute;
-    top: 15%;
-    left: 22%;
-    transform: translate(-50%, -50%);
-    text-shadow: 2px 2px white;
-    font-size: 20px;
+    height: 700px;
 }
 
 /*zipline*/
@@ -154,40 +161,82 @@ p{
     justify-content: center;
     text-align: center;
 }
-.card{
-    margin-top:15%;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    padding: 16px;
-    text-align: center;
-    justify-content: center;
-} 
-#card-image{
-    margin-left: 15%;
-}
-/* Float four columns side by side */
-.column {
-    float: left;
-    width: 25%;
-    padding: 0 40px;
+.pass {
+    display: inline-block;
+    position: relative;
+    width: 400px;
+    min-width: 400px;
+    height: 400px;
+    border-radius: 30px;
+    overflow:hidden;
+    box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.3);
+    margin: 30px;
+    margin-left: 3%;
+    
   }
   
-  /* Remove extra left and right margins, due to padding */
-  .row {margin: 0 -5px;}
+  .book-profile-img {
+    height: 70%;
+  }
   
-  /* Clear floats after the columns */
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
+  .book-description-bk {
+    background-image: linear-gradient(0deg , #3f5efb, #fc466b);
+    border-radius: 30px;
+    position: absolute;
+    top: 55%;
+    left: -5px;
+    height: 65%;
+    width: 108%;
+    transform: skew(19deg, -9deg);
+  }
+  
+  .second .book-description-bk {
+    background-image: linear-gradient(-20deg , #bb7413, #e7d25c)
   }
 
-/*card images*/
-.weekend-img{
-    width: 50%;
-}
-.family-img{
-    width: 45%;
-}
+  .third .book-description-bk {
+    background-image: linear-gradient(-20deg , green, #e7d25c)
+  }
+
+  .book-description {
+    position: absolute;
+    color: #fff;
+    font-weight: 900;
+    left: 90px;
+    bottom: 23%;
+  }
+  
+  .book-btn {
+    position: absolute;
+    color: #fff;
+    right: 30px;
+    bottom: 10%;
+    padding: 10px 20px;
+    border: 1px solid #fff;
+  }
+  
+  .book-btn a {
+    color: #fff;
+  }
+  
+  .book-price {
+    position: absolute;
+    color: #fff;
+    left: 30px;
+    bottom: 10%;
+  }
+  /* END CARD DESIGN */
+  .btn i:before {
+    width: 14px;
+    height: 14px;
+    position: fixed;
+    color: #fff;
+    background: #0077B5;
+    padding: 10px;
+    border-radius: 50%;
+    top:5px;
+    right:5px;
+  }
 
 /*eye candy 2*/
 .image2{   
@@ -201,27 +250,122 @@ p{
 
 }
 /*footer*/
-#footer {
-    position: relative;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: lightgrey;
-    color: black;
- }
- .footer-nav{
+.footer {
     display: flex;
-    justify-content: space-between;
-    background-color: lightgray;
+    flex-flow: row wrap;
+    padding: 30px 30px 20px 30px;
+    color: white;
+    background-color: #0082e6;
+    border-top: 1px solid #e5e5e5;
+}
+
+.footer > * {
+    flex:  1 100%;
+}
+
+.footer__addr {
+    margin-right: 1.25em;
+    margin-bottom: 2em;
+}
+
+.footer ul {
+    list-style: none;
+    padding-left: 0;
+}
+
+.footer li a{
+    line-height: 2em;
+    font-size: 18px;
+    color: white;
+}
+
+.footer a {
+    text-decoration: none;
+}
+
+.footer__nav {
+    display: flex;
+    flex-flow: row wrap;
+}
+
+.footer__nav > * {
+    flex: 1 50%;
+    margin-right: 1.25em;
+}
+
+.nav__ul a {
+    color: #999;
+}
+
+.nav__ul--extra {
+    column-count: 1;
+    column-gap: 1.25em;
+}
+.nav__item{
+    margin-left: 20%;
+}
+  
+@media screen and (min-width: 40.375em) {
+    .footer__nav > * {
+      flex: 1;
+    }
+
+    .nav__item--extra {
+      flex-grow: 2;
+    }
     
+    .footer__addr {
+      flex: 1 0px;
+    }
+    
+    .footer__nav {
+      flex: 2 0px;
+    }
 }
-.footer-menu{
-    display: flex;
-    gap: 6em;
-    font-size: 20px;
-    justify-content: center;
-    align-items: left;
-    margin-left: 25%;
-    margin-top: -4%;
-    cursor: pointer;
-}
+/*mobile device*/
+@media (max-width: 952px){
+    label.logo{
+      font-size: 30px;
+      padding-left: 50px;
+    }
+    nav ul li a{
+      font-size: 16px;
+    }
+  }
+  @media (max-width: 858px){
+    .checkbtn{
+      display: block;
+    }
+    nav{
+        width: 100%;
+        position: relative;
+    }
+    nav ul{
+      position: absolute;
+      width: 50%;
+      height: 45vh;
+      background: #97b8da;
+      top: 80px;
+      left: -70%;
+      text-align: center;
+      transition: all .5s;
+    }
+    nav ul li{
+      display: block;
+      margin: 50px 0;
+      line-height: 30px;
+    }
+    nav ul li a{
+      font-size: 20px;
+    }
+    a:hover,a.active{
+      background: none;
+      color: #0082e6;
+    }
+    #check:checked ~ ul{
+      left: 0;
+    }
+    .footer__nav{
+        margin-left: -23%;
+    }
+} 
