--- a/css/experience.css
+++ b/css/experience.css
@@ -70,7 +70,7 @@ a.active,a:hover{
 /*zipline*/
 #experiences{
     margin-top: 3%;
-    margin-left: 8%;
+    margin-left: 18%;
     margin-right: 8%;
 }
  h2{
@@ -82,6 +82,7 @@ h3{
 p{
     font-size: 20px;
 }
+
 .button{
     background-color: #4CAF50;
     border: none;
@@ -94,7 +95,8 @@ p{
     margin: 4px 2px;
     cursor: pointer;
 }
-.container{
+  
+/* .container{
     display: flex;
 }
 .zipline-img{
@@ -104,9 +106,9 @@ p{
     flex-basis: 40%;
     text-align: left;
     margin-top: -1%;
-}
+} */
 /*Kayaking*/
-.kayaking-img{
+/* .kayaking-img{
     margin-top: 6%;
 }
 .kayaking-text{
@@ -114,7 +116,7 @@ p{
     margin-top: 5%;
 }
 /*bungee jump*/
-.bungee-img{
+/* .bungee-img{
     margin-top: 6%;
 }
 .bungee-image{
@@ -123,9 +125,9 @@ p{
 .bungee-text{
     margin-top: 5%;
     margin-left:30%;
-}
+} */
 /*canopy walking*/
-.canopy-img{
+/* .canopy-img{
     margin-top: 6%;
 }
 .canopy-image{
@@ -135,9 +137,9 @@ p{
 .canopy-text{
     margin-top: 5%;
     margin-right: 20%;
-}
+} */
 /*rapel*/
-.rapel-img{
+/* .rapel-img{
     margin-top: 6%;
 }
 .rapel-image{
@@ -146,7 +148,7 @@ p{
 .rapel-text{
     margin-top: 5%;
     margin-left: 30%;
-}
+}  */
 /*book*/
 #book{
     margin-top: 5%;
@@ -167,7 +169,7 @@ p{
     width: 400px;
     min-width: 400px;
     height: 400px;
-    border-radius: 30px;
+    border-radius: 20px;
     overflow:hidden;
     box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.3);
     margin: 30px;
@@ -181,7 +183,7 @@ p{
   
   .book-description-bk {
     background-image: linear-gradient(0deg , #3f5efb, #fc466b);
-    border-radius: 30px;
+    border-radius: 10px;
     position: absolute;
     top: 55%;
     left: -5px;
@@ -203,7 +205,8 @@ p{
     color: #fff;
     font-weight: 900;
     left: 90px;
-    bottom: 23%;
+    top: 60%;
+    bottom: 26%;
   }
   
   .book-btn {
