--- a/css/experience.css
+++ b/css/experience.css
@@ -1,86 +1,15 @@
 html, body{
-    font-family: Arial, Helvetica, sans-serif;
     cursor: pointer;
+    font-family: Arial, Helvetica, sans-serif;
 }
 *{
-    padding: 0;
-    margin: 0;
-    text-decoration: none;
-    list-style: none;
     box-sizing: border-box;
-}
-header{
-    position: fixed;
-    width: 100%;
-    z-index: 2;
-}
-nav{
-    background: #0082e6;
-    height: 80px;
-    position: relative;
-    width: 100%;
-}
-main{
-  position: relative;
-}
-label.logo{
-    color: white;
-    font-size: 35px;
-    line-height: 80px;
-    padding: 0 100px;
-    font-weight: bold;
-}
-nav ul{
-    float: right;
-    margin-right: 20px;
-}
-nav ul li{
-    display: inline-block;
-    line-height: 80px;
-    margin: 0 5px;
-}
-nav ul li a{
-    color: white;
-    font-size: 17px;
-    padding: 7px 13px;
-    border-radius: 3px;
-}
-a.active,a:hover{
-    background: #1b9bff;
-    transition: .5s;
-}
-.checkbtn{
-    font-size: 30px;
-    color: white;
-    float: right;
-    line-height: 80px;
-    margin-right: 40px;
-    display: none;
-}
-#check{
-    display: none;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
 }
 
-/*Main image*/
-.main-section{
-  background-image: url("../images/eye-candy.jpg"); 
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  position: relative;
-  height: 700px;
-}
-
-/*zipline*/
-#experiences{
-  margin-top: 3%;
-  margin-left: 8%;
-  margin-right: 8%;
-}
-.responsive{
-  width: 100%;
-  height: auto;
-}
 h2{
   font-size: 50px;
 }
@@ -93,23 +22,110 @@ p{
 .container{
   display: flex;
 }
+
+/*header and navbar*/
+header{
+    position: relative;
+    width: 100%;
+    z-index: 2;
+}
+nav{
+    background: #0082e6;
+    height: 80px;
+    position: relative;
+    width: 100%;
+}
+nav ul{
+    float: right;
+    margin-right: 20px;
+}
+nav ul li{
+    display: inline-block;
+    line-height: 80px;
+    margin: 0 5px;
+}
+nav ul li a{
+    color: white;
+    font-weight: bold;
+    font-size: 17px;
+    padding: 7px 13px;
+}
+a.active,a:hover{
+    background: #1b9bff;
+    transition: .5s;
+}
+.checkbtn{
+    color: white;
+    font-size: 30px;
+    float: right;
+    line-height: 80px;
+    margin-right: 40px;
+    display: none;
+}
+#check{
+    display: none;
+}
+label.logo{
+  color: white;
+  font-size: 35px;
+  font-weight: bold;
+  line-height: 80px;
+  padding: 0 100px;
+}
+
+/*Main image*/
+main{
+  position: relative;
+}
+.main-section{
+  background-image: url("../images/eye-candy.jpg"); 
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  color: white;
+  position: relative;
+}
+.responsive{
+  color: white;
+  width: 100%;
+}
+/*book your visit button */
+.button{
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+}
+
+/*zipline*/
+#experiences{
+  margin-top: 3%;
+  margin-left: 8%;
+  margin-right: 8%;
+}
 .zipline-img{
   margin-top: 3%;
   width: 100%;
 }
 .zipline-text{
   flex-basis: 40%;
-  text-align: left;
-  margin-top: 3%;
   float: right;
+  margin-top: 3%;
   margin-left: 1%;
+  text-align: left;
   width: auto;
 }
+
 /*Kayaking*/
 .kayaking-img{
   margin-top: 6%;
   width: 100%;
-  
 }
 .kayaking-text{
   margin-right: 15%;
@@ -135,6 +151,7 @@ p{
   margin-top: 6%;
   margin-right: 20%;
 }
+
 /*rapel*/
 .rapel-img{
   margin-top: 6%;
@@ -145,109 +162,91 @@ p{
   margin-left: 1%;
   width: auto;
 }
-.button{
-    background-color: #4CAF50;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-}
 
 /*book*/
 #book{
-    margin-top: 5%;
-    display: block;
     align-items: center;
+    display: block;
     justify-content: center;
+    margin-top: 5%;
     text-align: center;
 }
 .book-section{
-    width: 100%;
     align-items: center;
     justify-content: center;
     text-align: center;
+    width: 100%;
 }
 .pass {
-    display: inline-block;
-    position: relative;
-    width: 400px;
-    min-width: 400px;
-    height: 400px;
-    border-radius: 20px;
-    overflow:hidden;
     box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.3);
+    border-radius: 20px;
+    display: inline-block;
+    height: 400px;
     margin: 30px;
     margin-left: 3%;
-    
+    min-width: 400px;
+    overflow:hidden;
+    position: relative;
+    width: 400px;
 }
-
 .book-profile-img {
   height: 70%;
 }
-
 .book-description-bk {
   background-image: linear-gradient(0deg , #3f5efb, #fc466b);
   border-radius: 10px;
+  height: 65%;
+  left: -5px;
   position: absolute;
   top: 55%;
-  left: -5px;
-  height: 65%;
-  width: 108%;
   transform: skew(19deg, -9deg);
+  width: 108%;
 }
 
 .second .book-description-bk {
   background-image: linear-gradient(-20deg , #bb7413, #e7d25c)
 }
-
 .third .book-description-bk {
   background-image: linear-gradient(-20deg , green, #e7d25c)
 }
-
 .book-description {
-  position: absolute;
+  bottom: 26%;
   color: #fff;
   font-weight: 900;
   left: 90px;
-  top: 60%;
-  bottom: 26%;
-}
-
-.book-btn {
   position: absolute;
-  color: #fff;
-  right: 30px;
-  bottom: 10%;
-  padding: 10px 20px;
-  border: 1px solid #fff;
+  top: 60%;
 }
-
+.book-price {
+  bottom: 10%;
+  color: #fff;
+  left: 30px;
+  position: absolute;
+}
+/*book button*/
+.book-btn {
+  border: 1px solid #fff;
+  bottom: 10%;
+  color: #fff;
+  position: absolute;
+  padding: 10px 20px;
+  right: 30px;
+}
 .book-btn a {
   color: #fff;
 }
 
-.book-price {
-  position: absolute;
-  color: #fff;
-  left: 30px;
-  bottom: 10%;
-}
 /* END CARD DESIGN */
 .btn i:before {
-  width: 14px;
+  border-radius: 50%;
+  background: #0077B5;
+  color: #fff;
   height: 14px;
   position: fixed;
-  color: #fff;
-  background: #0077B5;
   padding: 10px;
-  border-radius: 50%;
-  top:5px;
   right:5px;
+  top:5px;
+  width: 14px;
 }
 
 /*eye candy 2*/
@@ -259,57 +258,48 @@ p{
     position: relative;
     height: 600px;
     margin-top: 3%;
-
 }
+
 /*footer*/
 .footer {
+    background-color: #0082e6;
+    border-top: 1px solid #e5e5e5;
+    color: white;
     display: flex;
     flex-flow: row wrap;
     padding: 30px 30px 20px 30px;
-    color: white;
-    background-color: #0082e6;
-    border-top: 1px solid #e5e5e5;
     position: relative;
 }
-
 .footer > * {
     flex:  1 100%;
 }
-
 .footer__addr {
     margin-right: 1.25em;
     margin-bottom: 2em;
 }
-
 .footer ul {
     list-style: none;
     padding-left: 0;
 }
-
 .footer li a{
-    line-height: 2em;
     font-size: 18px;
     color: white;
+    line-height: 2em;
 }
-
 .footer a {
     text-decoration: none;
 }
-
 .footer__nav {
     display: flex;
     flex-flow: row wrap;
 }
-
 .footer__nav > * {
     flex: 1 50%;
     margin-right: 1.25em;
 }
-
 .nav__ul a {
     color: #999;
 }
-
 .nav__ul--extra {
     column-count: 1;
     column-gap: 1.25em;
@@ -317,15 +307,11 @@ p{
 .nav__item{
     margin-left: 20%;
 }
-/*mobile device*/
-@media screen and (max-device-width: 480px) {
-
-}
-  
+/*desktop screen*/
 @media screen and (min-width: 40.375em) {
     .zipline-text{
-      width: 50%;
       margin-top: -27%;
+      width: 50%;
     }
     .zipline-img{
       margin-top: 3%;
@@ -374,25 +360,25 @@ p{
       width: 40%;
     }
 
+    /*book section*/
     #book{
-      margin-top: 25%;
-      display: block;
       align-items: center;
+      display: block;
       justify-content: center;
+      margin-top: 25%;
       text-align: center;
     }  
+
+    /*footer*/
     .footer__nav > * {
       flex: 1;
     }
-
     .nav__item--extra {
       flex-grow: 2;
     }
-    
     .footer__addr {
       flex: 1 0px;
     }
-    
     .footer__nav {
       flex: 2 0px;
     }
@@ -412,23 +398,23 @@ p{
       display: block;
     }
     nav{
-        width: 100%;
         position: relative;
+        width: 100%;
     }
     nav ul{
-      position: absolute;
-      width: 100%;
-      height: 100vh;
       background: #97b8da;
-      top: 80px;
+      height: 100vh;
       left: -100%;
+      position: absolute;
+      top: 80px;
       text-align: center;
       transition: all .5s;
+      width: 100%;
     }
     nav ul li{
       display: block;
-      margin: 50px 0;
       line-height: 30px;
+      margin: 50px 0;
     }
     nav ul li a{
       font-size: 20px;
@@ -438,7 +424,7 @@ p{
       color: #0082e6;
     }
     #check:checked ~ ul{
-      left: 0;
+        left: 0;
     }
     .footer__nav{
         margin-left: -23%;
